@@ -165,8 +165,10 @@ public class BrowserView extends JPanel
 	} //}}}
 
 	//{{{ directoryLoaded() method
-	public void directoryLoaded(String path, Vector directory)
+	public void directoryLoaded(String path, String canonPath, Vector directory)
 	{
+		System.err.println("loaded " + path + ": "
+			+ currentlyLoading);
 		DefaultMutableTreeNode currentlyLoadingTreeNode
 			= (DefaultMutableTreeNode)currentlyLoading.get(path);
 
